reorganization in module

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,4 @@
-idf_component_register(SRCS "main.c"
-                       INCLUDE_DIRS ".")
+idf_component_register(
+    SRCS "src/main.c" "src/leds.c"  # fichiers sources relatifs à ce CMakeLists.txt
+    INCLUDE_DIRS "include"           # dossier contenant les headers
+)
